--- a/src/force-app/main/default/lwc/accountOrders/accountOrders.html
+++ b/src/force-app/main/default/lwc/accountOrders/accountOrders.html
@@ -9,11 +9,11 @@
             <table class="slds-table slds-table_bordered slds-table_fixed-layout">
                 <thead>
                     <tr>
-                        <th>Order Number</th>
-                        <th>Start Date</th>
-                        <th>Status</th>
-                        <th>Amount</th>
-                        <th>Actions</th>
+                        <th aria-label="Order Number">Order Number</th>
+                        <th aria-label="Start Date">Start Date</th>
+                        <th aria-label="Status">Status</th>
+                        <th aria-label="Amount">Amount</th>
+                        <th aria-label="Actions">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
