Resolve some sonar errors as a prep for UC#2.

--- a/src/force-app/main/default/lwc/accountOrders/accountOrders.html
+++ b/src/force-app/main/default/lwc/accountOrders/accountOrders.html
@@ -21,7 +21,7 @@
             </div>
             <div class={cardBodyCSSClasses}>
                 <template lwc:if={showData}>
-                    <table class="slds-table slds-table_cell-buffer slds-table_bordered" summary="Custom related list with Orders data.">
+                    <table class="slds-table slds-table_cell-buffer slds-table_bordered">
                         <thead>
                             <tr class="slds-line-height_reset">
                                 <th scope="col">
