Resolve some more sonar errors as a prep for UC#2.

--- a/src/force-app/main/default/lwc/accountOrders/accountOrders.html
+++ b/src/force-app/main/default/lwc/accountOrders/accountOrders.html
@@ -22,6 +22,7 @@
             <div class={cardBodyCSSClasses}>
                 <template lwc:if={showData}>
                     <table class="slds-table slds-table_cell-buffer slds-table_bordered">
+                        <caption>Custom related list with Orders data.</caption>
                         <thead>
                             <tr class="slds-line-height_reset">
                                 <th scope="col">
