UC#2 Data Setup

--- a/src/force-app/main/default/lwc/orederList/orederList.html
+++ b/src/force-app/main/default/lwc/orederList/orederList.html
@@ -74,17 +74,19 @@
                 </tbody>
             </table>
             <div class="slds-align_absolute-center slds-m-around_medium"> 
-                <div class="slds-p-right_xx-small">
-                    <lightning-button label="Prev" disabled={isPrevDisabled} onclick={handlePagePrevAction} icon-name="utility:back" name="prev"></lightning-button>  
+                <div class="slds-align_absolute-center">
+                    <div class="slds-p-right_xx-small">
+                        <lightning-button label="Prev" disabled={isPrevDisabled} onclick={handlePagePrevAction} icon-name="utility:back" name="prev"></lightning-button>  
+                    </div>
+                    <span class="slds-badge slds-badge_lightest">
+                        Page {pageNumber} of {totalPages}
+                    </span>
+                    <div class="slds-p-left_xx-small">
+                        <lightning-button label="Next" disabled={isNextDisabled} onclick={handlePageNextAction} icon-name="utility:forward" icon-position="right" name="next"></lightning-button>
+                    </div>   
                 </div>
-                <span class="slds-badge slds-badge_lightest">
-                    Page {pageNumber} of {totalPages}
-                </span>
-                <div class="slds-p-left_xx-small">
-                    <lightning-button label="Next" disabled={isNextDisabled} onclick={handlePageNextAction} icon-name="utility:forward" icon-position="right" name="next"></lightning-button>
-                </div>      
-
-                <div class="slds-p-left_xx-small">
+                
+                <div class="slds-var-p-left_xx-large">
                     <lightning-combobox 
                         name="pageSize" 
                         label="Select page size"
@@ -95,7 +97,6 @@
                         dropdown-alignment="auto">
                     </lightning-combobox>
                 </div>
-                
-            </div>  
+            </div> 
     </lightning-card>
 </template>
